# NihilEngine-Repo

./: .gitignore  CMakeLists.txt  INTEGRATION_GUIDE.md  LOD_SYSTEM_GUIDE.md  README.md  USAGE_GUIDE.md  initial-cache.cmake  test_procedural.cpp
.trunk/: trunk.yaml
MonJeu/: AUDIO_INTEGRATION.md  CMakeLists.txt
MonJeu/assets/texturepack/: changelog.txt  pack.mcmeta
MonJeu/include/MonJeu/: Chunk.h  ChunkSerializer.h  Constants.h  Game.h  GameDebugOverlay.h  Player.h  SaveManager.h  VoxelWorld.h  WorldSaveManager.h
MonJeu/src/: Chunk.cpp  ChunkSerializer.cpp  Game.cpp  GameDebugOverlay.cpp  Player.cpp  SaveManager.cpp  VoxelWorld.cpp  WorldSaveManager.cpp  main.cpp
NihilEngine/: CMakeLists.txt
NihilEngine/include/NihilEngine/: Audio.h  BiomeGenerator.h  Camera.h  ChunkDataCache.h  Constants.h  DebugOverlay.h  Entity.h  EntityController.h  Environment.h  IControllableEntity.h  Input.h  LODMeshGenerator.h  LODSystem.h  Mesh.h  Noise.h  Performance.h  Physics.h  ProceduralGenerator.h  ProgressiveChunkUpdate.h  Renderer.h  RiverGenerator.h  TerrainGenerator.h  TextRenderer.h  TextureManager.h  VegetationGenerator.h  WaterGenerator.h  Window.h
NihilEngine/src/: Audio.cpp  BiomeGenerator.cpp  Camera.cpp  ChunkDataCache.cpp  DebugOverlay.cpp  Entity.cpp  EntityController.cpp  Environment.cpp  Input.cpp  LODMeshGenerator.cpp  LODSystem.cpp  Mesh.cpp  Noise.cpp  Performance.cpp  Physics.cpp  ProceduralGenerator.cpp  ProgressiveChunkUpdate.cpp  Renderer.cpp  RiverGenerator.cpp  TerrainGenerator.cpp  TextRenderer.cpp  TextureManager.cpp  VegetationGenerator.cpp  WaterGenerator.cpp  Window.cpp
saves/world1/: world.info
saves/world1/0/0/: chunk_-1_2.chunk  chunk_-1_3.chunk  chunk_0_-1.chunk  chunk_0_0.chunk  chunk_0_3.chunk  chunk_1_-1.chunk  chunk_1_0.chunk  chunk_1_1.chunk  chunk_1_2.chunk
